feat: implement auth jwt
