# api/location/handler.go
@@ -1,7 +1,6 @@
 package location
 
 import (
-	"fmt"
 	"net/http"
 	"strconv"
 
@@ -71,10 +70,11 @@ func (h Handler) Add(c echo.Context) error {
 //	@Tags			locations
 //	@Accept			json
 //	@Produce		json
+//	@Security		BearerAuth
 //	@Param			limit		query		int	true	"limit"		default(15)
 //	@Param			offset		query		int	true	"offset"	default(1)
 //	@Success		200			{object}	api.MultipleDataResp[Location]
-//	@Router			/locations 																					[get]
+//	@Router			/locations 																									[get]
 func (h Handler) GetAll(c echo.Context) error {
 	validation := make(map[string][]string)
 	offset := c.QueryParam("offset")
@@ -104,9 +104,7 @@ func (h Handler) GetAll(c echo.Context) error {
 		return api.ErrorResponse(c, http.StatusBadRequest, err)
 	}
 
-	fmt.Println("offset:", offset, "limit:", limit)
-
-	l, err := h.Service.GetAll(c, offsetInt, limitInt)
+	l, err := h.Service.GetAll(c, limitInt, offsetInt)
 	if err != nil {
 		zlog.Error().Msg(err.Error())
 
@@ -131,6 +129,7 @@ func (h Handler) GetAll(c echo.Context) error {
 //	@Tags			locations
 //	@Accept			json
 //	@Produce		json
+//	@Security		BearerAuth
 //	@Param			id					path		string	true	"location id"
 //	@Success		200					{object}	api.SingleDataResp[Location]
 //	@Router			/locations/{id} 	[get]
@@ -168,6 +167,7 @@ func (h Handler) GetById(c echo.Context) error {
 //	@Tags			locations
 //	@Accept			json
 //	@Produce		json
+//	@Security		BearerAuth
 //	@Param			id					path		string		true	"location id"
 //	@Param			location			body		UpdateReq	true	"Update request"
 //	@Success		200					{object}	api.SingleDataResp[Location]
@@ -214,6 +214,7 @@ func (h Handler) UpdateById(c echo.Context) error {
 //	@Tags			locations
 //	@Accept			json
 //	@Produce		json
+//	@Security		BearerAuth
 //	@Param			id					path		string	true	"location id"
 //	@Success		200					{object}	api.SingleDataResp[Location]
 //	@Router			/locations/{id} 	[delete]
